# ViktorRep1

./: .gitignore  README.md  company_analyzer.py  mcp_config.json  test_mcp.py
MM/: .env.example  .gitignore  KOU_DUAL_COMPACT_WEB_PRODUCTION_ROADMAP.md  KOU_PRODUCTION_FINISH_LINE.md  KOU_RECOVERY_MANIFEST.md  PolymarketAPI_strings.txt  arb_logger.py  asset_binary_compare.py  asset_uncertainty_ranking.py  asset_vol_report.py  auto_pilot.py  binance_download_1s.py  binary_prediction_bot.py  bitstamp_download_1m.py  btc_data_analysis.py  btc_vol_report.py  btc_vol_tracker.py  client_wrapper.py  coinbase_download_1m.py  coinbase_download_trades_to_1s.py  config.py  crypto_parser.py  data_feed.py  data_logger.py  dry_run_decision.py  find_active_market.py  find_market.py  implied_vol_calc.py  kou_dashboard.py  kou_decision_bot.py  kou_dual_compact_monitor.py  kou_dual_compact_web.py  kou_granularity_test.py  kou_live_capture.py  kou_midpoint_backtest.py  kou_polymarket_live_capture.py  kou_shadow_signal_web.py  kou_signal_inspector.py  main.py  manual_predictor.py  (+37 more)
PortfolioManager/: index.html  package-lock.json  package.json
Real_Scale_Solar_System/: App.tsx  constants.ts  index.html  package-lock.json  package.json
Rust_HFT/: Cargo.toml  README.md  run.sh
Rust_HFT/execution_engine/: Cargo.toml
Rust_HFT/execution_engine/src/: main.rs
Rust_HFT/price_engine/: Cargo.toml
Rust_HFT/price_engine/src/: main.rs
Saturn-descent/: index.html  main.js  package-lock.json  package.json  style.css
backend/: README.md  main.py  requirements.txt
jupiterproject/: index.html
(+291 files in other folders)
