[package]
name = "execution_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
polymarket-rs = "0.2.0" # Assuming this exists or use git
core_types = { path = "../core_types" }
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
