[package]
name = "price_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
binance = "0.12"
statrs = "0.16" # Black-Scholes
core_types = { path = "../core_types" }
log = "0.4"
env_logger = "0.10"
